# Copyright 2016 The Fuchsia Authors
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

import("//garnet/lib/magma/gnbuild/magma.gni")

config("vbo_public_config") {
  include_dirs = [
    ".",
    "..",
  ]
}

source_set("vbo") {
  public_configs = [ ":vbo_public_config" ]

  include_dirs = [ "$mesa_build_root/src/mesa" ]

  deps = [
    "$mesa_build_root/include:c_compat",
    "$mesa_build_root/src/mapi/glapi",
    "$mesa_build_root/src/util",
  ]

  sources = [
    "vbo.h",
    "vbo_attrib.h",
    "vbo_attrib_tmp.h",
    "vbo_context.c",
    "vbo_context.h",
    "vbo_exec.c",
    "vbo_exec.h",
    "vbo_exec_api.c",
    "vbo_exec_array.c",
    "vbo_exec_draw.c",
    "vbo_exec_eval.c",
    "vbo_minmax_index.c",
    "vbo_noop.c",
    "vbo_noop.h",
    "vbo_primitive_restart.c",
    "vbo_rebase.c",
    "vbo_save.c",
    "vbo_save.h",
    "vbo_save_api.c",
    "vbo_save_draw.c",
    "vbo_save_loopback.c",
    "vbo_split.c",
    "vbo_split.h",
    "vbo_split_copy.c",
    "vbo_split_inplace.c",
  ]
}
