# Copyright 2016 The Fuchsia Authors
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

import("//garnet/lib/magma/gnbuild/magma.gni")

config("common_public_config") {
  include_dirs = [ "." ]
}

source_set("common") {
  public_configs = [
    "$mesa_build_root/src:common_config",
    ":common_public_config",
  ]

  deps = [
    "$mesa_build_root/include:GL",
    "$mesa_build_root/src/mapi/glapi",
    "$mesa_build_root/src/util",
  ]

  include_dirs = [ "$mesa_build_root/src/mesa/main" ]

  sources = [
    "driverfuncs.c",
    "driverfuncs.h",
    "meta.c",
    "meta.h",
    "meta_blit.c",
    "meta_copy_image.c",
    "meta_generate_mipmap.c",
    "meta_tex_subimage.c",
  ]
}
